@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,12 +16,14 @@
 
 package org.springframework.beans;
 
+import java.net.MalformedURLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -45,10 +47,10 @@ import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
  * @author Chris Beams
  * @since 18.01.2006
  */
-class BeanWrapperGenericsTests {
+public class BeanWrapperGenericsTests {
 
 	@Test
-	void testGenericSet() {
+	public void testGenericSet() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Set<String> input = new HashSet<>();
@@ -60,7 +62,7 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericLowerBoundedSet() {
+	public void testGenericLowerBoundedSet() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, true));
@@ -73,7 +75,7 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericSetWithConversionFailure() {
+	public void testGenericSetWithConversionFailure() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Set<TestBean> input = new HashSet<>();
@@ -84,7 +86,7 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericList() throws Exception {
+	public void testGenericList() throws MalformedURLException {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		List<String> input = new ArrayList<>();
@@ -96,7 +98,7 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericListElement() throws Exception {
+	public void testGenericListElement() throws MalformedURLException {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setResourceList(new ArrayList<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
@@ -105,29 +107,29 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericMap() {
+	public void testGenericMap() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Map<String, String> input = new HashMap<>();
 		input.put("4", "5");
 		input.put("6", "7");
 		bw.setPropertyValue("shortMap", input);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
 	}
 
 	@Test
-	void testGenericMapElement() {
+	public void testGenericMapElement() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setShortMap(new HashMap<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("shortMap[4]", "5");
 		assertThat(bw.getPropertyValue("shortMap[4]")).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
 	}
 
 	@Test
-	void testGenericMapWithKeyType() {
+	public void testGenericMapWithKeyType() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Map<String, String> input = new HashMap<>();
@@ -139,17 +141,17 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericMapElementWithKeyType() {
+	public void testGenericMapElementWithKeyType() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setLongMap(new HashMap<Long, Integer>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("longMap[4]", "5");
-		assertThat(gb.getLongMap().get(Long.valueOf("4"))).isEqualTo("5");
+		assertThat(gb.getLongMap().get(new Long("4"))).isEqualTo("5");
 		assertThat(bw.getPropertyValue("longMap[4]")).isEqualTo("5");
 	}
 
 	@Test
-	void testGenericMapWithCollectionValue() {
+	public void testGenericMapWithCollectionValue() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.registerCustomEditor(Number.class, new CustomNumberEditor(Integer.class, false));
@@ -161,12 +163,14 @@ class BeanWrapperGenericsTests {
 		value2.add(Boolean.TRUE);
 		input.put("2", value2);
 		bw.setPropertyValue("collectionMap", input);
-		assertThat(gb.getCollectionMap().get(1) instanceof HashSet).isTrue();
-		assertThat(gb.getCollectionMap().get(2) instanceof ArrayList).isTrue();
+		boolean condition1 = gb.getCollectionMap().get(1) instanceof HashSet;
+		assertThat(condition1).isTrue();
+		boolean condition = gb.getCollectionMap().get(2) instanceof ArrayList;
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	void testGenericMapElementWithCollectionValue() {
+	public void testGenericMapElementWithCollectionValue() {
 		GenericBean<?> gb = new GenericBean<>();
 		gb.setCollectionMap(new HashMap<>());
 		BeanWrapper bw = new BeanWrapperImpl(gb);
@@ -174,26 +178,27 @@ class BeanWrapperGenericsTests {
 		HashSet<Integer> value1 = new HashSet<>();
 		value1.add(1);
 		bw.setPropertyValue("collectionMap[1]", value1);
-		assertThat(gb.getCollectionMap().get(1) instanceof HashSet).isTrue();
+		boolean condition = gb.getCollectionMap().get(1) instanceof HashSet;
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	void testGenericMapFromProperties() {
+	public void testGenericMapFromProperties() {
 		GenericBean<?> gb = new GenericBean<>();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		Properties input = new Properties();
 		input.setProperty("4", "5");
 		input.setProperty("6", "7");
 		bw.setPropertyValue("shortMap", input);
-		assertThat(gb.getShortMap().get(Short.valueOf("4"))).isEqualTo(5);
-		assertThat(gb.getShortMap().get(Short.valueOf("6"))).isEqualTo(7);
+		assertThat(gb.getShortMap().get(new Short("4"))).isEqualTo(5);
+		assertThat(gb.getShortMap().get(new Short("6"))).isEqualTo(7);
 	}
 
 	@Test
-	void testGenericListOfLists() {
+	public void testGenericListOfLists() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
-		List<List<Integer>> list = new ArrayList<>();
-		list.add(new ArrayList<>());
+		List<List<Integer>> list = new LinkedList<>();
+		list.add(new LinkedList<>());
 		gb.setListOfLists(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfLists[0][0]", 5);
@@ -202,10 +207,10 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericListOfListsWithElementConversion() {
+	public void testGenericListOfListsWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
-		List<List<Integer>> list = new ArrayList<>();
-		list.add(new ArrayList<>());
+		List<List<Integer>> list = new LinkedList<>();
+		list.add(new LinkedList<>());
 		gb.setListOfLists(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfLists[0][0]", "5");
@@ -214,7 +219,7 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericListOfArrays() {
+	public void testGenericListOfArrays() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		ArrayList<String[]> list = new ArrayList<>();
 		list.add(new String[] {"str1", "str2"});
@@ -226,7 +231,7 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericListOfArraysWithElementConversion() {
+	public void testGenericListOfArraysWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		ArrayList<String[]> list = new ArrayList<>();
 		list.add(new String[] {"str1", "str2"});
@@ -239,58 +244,58 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericListOfMaps() {
+	public void testGenericListOfMaps() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
-		List<Map<Integer, Long>> list = new ArrayList<>();
+		List<Map<Integer, Long>> list = new LinkedList<>();
 		list.add(new HashMap<>());
 		gb.setListOfMaps(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("listOfMaps[0][10]", 5L);
-		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(5L);
-		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(Long.valueOf(5));
+		bw.setPropertyValue("listOfMaps[0][10]", new Long(5));
+		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(new Long(5));
+		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(new Long(5));
 	}
 
 	@Test
-	void testGenericListOfMapsWithElementConversion() {
+	public void testGenericListOfMapsWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
-		List<Map<Integer, Long>> list = new ArrayList<>();
+		List<Map<Integer, Long>> list = new LinkedList<>();
 		list.add(new HashMap<>());
 		gb.setListOfMaps(list);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("listOfMaps[0][10]", "5");
-		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(5L);
-		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(Long.valueOf(5));
+		assertThat(bw.getPropertyValue("listOfMaps[0][10]")).isEqualTo(new Long(5));
+		assertThat(gb.getListOfMaps().get(0).get(10)).isEqualTo(new Long(5));
 	}
 
 	@Test
-	void testGenericMapOfMaps() {
+	public void testGenericMapOfMaps() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<String, Map<Integer, Long>> map = new HashMap<>();
 		map.put("mykey", new HashMap<>());
 		gb.setMapOfMaps(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
-		bw.setPropertyValue("mapOfMaps[mykey][10]", 5L);
-		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(5L);
-		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(Long.valueOf(5));
+		bw.setPropertyValue("mapOfMaps[mykey][10]", new Long(5));
+		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(new Long(5));
+		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(new Long(5));
 	}
 
 	@Test
-	void testGenericMapOfMapsWithElementConversion() {
+	public void testGenericMapOfMapsWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<String, Map<Integer, Long>> map = new HashMap<>();
 		map.put("mykey", new HashMap<>());
 		gb.setMapOfMaps(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfMaps[mykey][10]", "5");
-		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(Long.valueOf(5));
-		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(Long.valueOf(5));
+		assertThat(bw.getPropertyValue("mapOfMaps[mykey][10]")).isEqualTo(new Long(5));
+		assertThat(gb.getMapOfMaps().get("mykey").get(10)).isEqualTo(new Long(5));
 	}
 
 	@Test
-	void testGenericMapOfLists() {
+	public void testGenericMapOfLists() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<Integer, List<Integer>> map = new HashMap<>();
-		map.put(1, new ArrayList<>());
+		map.put(1, new LinkedList<>());
 		gb.setMapOfLists(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfLists[1][0]", 5);
@@ -299,10 +304,10 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericMapOfListsWithElementConversion() {
+	public void testGenericMapOfListsWithElementConversion() throws MalformedURLException {
 		GenericBean<String> gb = new GenericBean<>();
 		Map<Integer, List<Integer>> map = new HashMap<>();
-		map.put(1, new ArrayList<>());
+		map.put(1, new LinkedList<>());
 		gb.setMapOfLists(map);
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("mapOfLists[1][0]", "5");
@@ -311,7 +316,7 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfInteger() {
+	public void testGenericTypeNestingMapOfInteger() throws Exception {
 		Map<String, String> map = new HashMap<>();
 		map.put("testKey", "100");
 
@@ -320,13 +325,14 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfInteger", map);
 
 		Object obj = gb.getMapOfInteger().get("testKey");
-		assertThat(obj instanceof Integer).isTrue();
+		boolean condition = obj instanceof Integer;
+		assertThat(condition).isTrue();
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfListOfInteger() {
+	public void testGenericTypeNestingMapOfListOfInteger() throws Exception {
 		Map<String, List<String>> map = new HashMap<>();
-		List<String> list = Arrays.asList("1", "2", "3");
+		List<String> list = Arrays.asList(new String[] {"1", "2", "3"});
 		map.put("testKey", list);
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -334,13 +340,14 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfListOfInteger", map);
 
 		Object obj = gb.getMapOfListOfInteger().get("testKey").get(0);
-		assertThat(obj instanceof Integer).isTrue();
+		boolean condition = obj instanceof Integer;
+		assertThat(condition).isTrue();
 		assertThat(((Integer) obj).intValue()).isEqualTo(1);
 	}
 
 	@Test
-	void testGenericTypeNestingListOfMapOfInteger() {
-		List<Map<String, String>> list = new ArrayList<>();
+	public void testGenericTypeNestingListOfMapOfInteger() throws Exception {
+		List<Map<String, String>> list = new LinkedList<>();
 		Map<String, String> map = new HashMap<>();
 		map.put("testKey", "5");
 		list.add(map);
@@ -350,14 +357,15 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("listOfMapOfInteger", list);
 
 		Object obj = gb.getListOfMapOfInteger().get(0).get("testKey");
-		assertThat(obj instanceof Integer).isTrue();
+		boolean condition = obj instanceof Integer;
+		assertThat(condition).isTrue();
 		assertThat(((Integer) obj).intValue()).isEqualTo(5);
 	}
 
 	@Test
-	void testGenericTypeNestingMapOfListOfListOfInteger() {
+	public void testGenericTypeNestingMapOfListOfListOfInteger() throws Exception {
 		Map<String, List<List<String>>> map = new HashMap<>();
-		List<String> list = Arrays.asList("1", "2", "3");
+		List<String> list = Arrays.asList(new String[] {"1", "2", "3"});
 		map.put("testKey", Collections.singletonList(list));
 
 		NestedGenericCollectionBean gb = new NestedGenericCollectionBean();
@@ -365,16 +373,17 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("mapOfListOfListOfInteger", map);
 
 		Object obj = gb.getMapOfListOfListOfInteger().get("testKey").get(0).get(0);
-		assertThat(obj instanceof Integer).isTrue();
+		boolean condition = obj instanceof Integer;
+		assertThat(condition).isTrue();
 		assertThat(((Integer) obj).intValue()).isEqualTo(1);
 	}
 
 	@Test
-	void testComplexGenericMap() {
+	public void testComplexGenericMap() {
 		Map<List<String>, List<String>> inputMap = new HashMap<>();
-		List<String> inputKey = new ArrayList<>();
+		List<String> inputKey = new LinkedList<>();
 		inputKey.add("1");
-		List<String> inputValue = new ArrayList<>();
+		List<String> inputValue = new LinkedList<>();
 		inputValue.add("10");
 		inputMap.put(inputKey, inputValue);
 
@@ -383,11 +392,11 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("genericMap", inputMap);
 
 		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(1);
-		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexGenericMapWithCollectionConversion() {
+	public void testComplexGenericMapWithCollectionConversion() {
 		Map<Set<String>, Set<String>> inputMap = new HashMap<>();
 		Set<String> inputKey = new HashSet<>();
 		inputKey.add("1");
@@ -400,12 +409,12 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("genericMap", inputMap);
 
 		assertThat(holder.getGenericMap().keySet().iterator().next().get(0)).isEqualTo(1);
-		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertThat(holder.getGenericMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexGenericIndexedMapEntry() {
-		List<String> inputValue = new ArrayList<>();
+	public void testComplexGenericIndexedMapEntry() {
+		List<String> inputValue = new LinkedList<>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
@@ -413,11 +422,11 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
 
 		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(1);
-		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexGenericIndexedMapEntryWithCollectionConversion() {
+	public void testComplexGenericIndexedMapEntryWithCollectionConversion() {
 		Set<String> inputValue = new HashSet<>();
 		inputValue.add("10");
 
@@ -426,12 +435,12 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("genericIndexedMap[1]", inputValue);
 
 		assertThat(holder.getGenericIndexedMap().keySet().iterator().next()).isEqualTo(1);
-		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertThat(holder.getGenericIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexDerivedIndexedMapEntry() {
-		List<String> inputValue = new ArrayList<>();
+	public void testComplexDerivedIndexedMapEntry() {
+		List<String> inputValue = new LinkedList<>();
 		inputValue.add("10");
 
 		ComplexMapHolder holder = new ComplexMapHolder();
@@ -439,11 +448,11 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
 
 		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(1);
-		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testComplexDerivedIndexedMapEntryWithCollectionConversion() {
+	public void testComplexDerivedIndexedMapEntryWithCollectionConversion() {
 		Set<String> inputValue = new HashSet<>();
 		inputValue.add("10");
 
@@ -452,11 +461,11 @@ class BeanWrapperGenericsTests {
 		bw.setPropertyValue("derivedIndexedMap[1]", inputValue);
 
 		assertThat(holder.getDerivedIndexedMap().keySet().iterator().next()).isEqualTo(1);
-		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(Long.valueOf(10));
+		assertThat(holder.getDerivedIndexedMap().values().iterator().next().get(0)).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testGenericallyTypedIntegerBean() {
+	public void testGenericallyTypedIntegerBean() throws Exception {
 		GenericIntegerBean gb = new GenericIntegerBean();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("genericProperty", "10");
@@ -467,7 +476,7 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testGenericallyTypedSetOfIntegerBean() {
+	public void testGenericallyTypedSetOfIntegerBean() throws Exception {
 		GenericSetOfIntegerBean gb = new GenericSetOfIntegerBean();
 		BeanWrapper bw = new BeanWrapperImpl(gb);
 		bw.setPropertyValue("genericProperty", "10");
@@ -478,23 +487,23 @@ class BeanWrapperGenericsTests {
 	}
 
 	@Test
-	void testSettingGenericPropertyWithReadOnlyInterface() {
+	public void testSettingGenericPropertyWithReadOnlyInterface() {
 		Bar bar = new Bar();
 		BeanWrapper bw = new BeanWrapperImpl(bar);
 		bw.setPropertyValue("version", "10");
-		assertThat(bar.getVersion()).isEqualTo(Double.valueOf(10.0));
+		assertThat(bar.getVersion()).isEqualTo(new Double(10.0));
 	}
 
 	@Test
-	void testSettingLongPropertyWithGenericInterface() {
+	public void testSettingLongPropertyWithGenericInterface() {
 		Promotion bean = new Promotion();
 		BeanWrapper bw = new BeanWrapperImpl(bean);
 		bw.setPropertyValue("id", "10");
-		assertThat(bean.getId()).isEqualTo(Long.valueOf(10));
+		assertThat(bean.getId()).isEqualTo(new Long(10));
 	}
 
 	@Test
-	void testUntypedPropertyWithMapAtRuntime() {
+	public void testUntypedPropertyWithMapAtRuntime() {
 		class Holder<D> {
 			private final D data;
 			public Holder(D data) {
