@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -41,11 +40,11 @@ import org.springframework.expression.spel.support.StandardEvaluationContext;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @SuppressWarnings("rawtypes")
-class IndexingTests {
+public class IndexingTests {
 
 	@Test
 	@SuppressWarnings("unchecked")
-	void indexIntoGenericPropertyContainingMap() {
+	public void indexIntoGenericPropertyContainingMap() {
 		Map<String, String> property = new HashMap<>();
 		property.put("foo", "bar");
 		this.property = property;
@@ -63,7 +62,7 @@ class IndexingTests {
 
 	@Test
 	@SuppressWarnings("unchecked")
-	void indexIntoGenericPropertyContainingMapObject() {
+	public void indexIntoGenericPropertyContainingMapObject() {
 		Map<String, Map<String, String>> property = new HashMap<>();
 		Map<String, String> map = new HashMap<>();
 		map.put("foo", "bar");
@@ -112,7 +111,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void setGenericPropertyContainingMap() {
+	public void setGenericPropertyContainingMap() {
 		Map<String, String> property = new HashMap<>();
 		property.put("foo", "bar");
 		this.property = property;
@@ -127,7 +126,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void setPropertyContainingMap() {
+	public void setPropertyContainingMap() {
 		Map<Integer, Integer> property = new HashMap<>();
 		property.put(9, 3);
 		this.parameterizedMap = property;
@@ -144,19 +143,19 @@ class IndexingTests {
 	public Map<Integer, Integer> parameterizedMap;
 
 	@Test
-	void setPropertyContainingMapAutoGrow() {
+	public void setPropertyContainingMapAutoGrow() {
 		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, false));
 		Expression expression = parser.parseExpression("parameterizedMap");
 		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("java.util.Map<java.lang.Integer, java.lang.Integer>");
 		assertThat(expression.getValue(this)).isEqualTo(property);
 		expression = parser.parseExpression("parameterizedMap['9']");
-		assertThat(expression.getValue(this)).isNull();
+		assertThat(expression.getValue(this)).isEqualTo(null);
 		expression.setValue(this, "37");
 		assertThat(expression.getValue(this)).isEqualTo(37);
 	}
 
 	@Test
-	void indexIntoGenericPropertyContainingList() {
+	public void indexIntoGenericPropertyContainingList() {
 		List<String> property = new ArrayList<>();
 		property.add("bar");
 		this.property = property;
@@ -169,7 +168,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void setGenericPropertyContainingList() {
+	public void setGenericPropertyContainingList() {
 		List<Integer> property = new ArrayList<>();
 		property.add(3);
 		this.property = property;
@@ -184,7 +183,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void setGenericPropertyContainingListAutogrow() {
+	public void setGenericPropertyContainingListAutogrow() {
 		List<Integer> property = new ArrayList<>();
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
@@ -200,28 +199,8 @@ class IndexingTests {
 		}
 	}
 
-	public List<BigDecimal> decimals;
-
 	@Test
-	void autoGrowListOfElementsWithoutDefaultConstructor() {
-		this.decimals = new ArrayList<>();
-		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
-		parser.parseExpression("decimals[0]").setValue(this, "123.4");
-		assertThat(decimals).containsExactly(BigDecimal.valueOf(123.4));
-	}
-
-	@Test
-	void indexIntoPropertyContainingListContainingNullElement() {
-		this.decimals = new ArrayList<>();
-		this.decimals.add(null);
-		this.decimals.add(BigDecimal.ONE);
-		SpelExpressionParser parser = new SpelExpressionParser(new SpelParserConfiguration(true, true));
-		parser.parseExpression("decimals[0]").setValue(this, "9876.5");
-		assertThat(decimals).containsExactly(BigDecimal.valueOf(9876.5), BigDecimal.ONE);
-	}
-
-	@Test
-	void indexIntoPropertyContainingList() {
+	public void indexIntoPropertyContainingList() {
 		List<Integer> property = new ArrayList<>();
 		property.add(3);
 		this.parameterizedList = property;
@@ -236,7 +215,7 @@ class IndexingTests {
 	public List<Integer> parameterizedList;
 
 	@Test
-	void indexIntoPropertyContainingListOfList() {
+	public void indexIntoPropertyContainingListOfList() {
 		List<List<Integer>> property = new ArrayList<>();
 		property.add(Arrays.asList(3));
 		this.parameterizedListOfList = property;
@@ -251,7 +230,7 @@ class IndexingTests {
 	public List<List<Integer>> parameterizedListOfList;
 
 	@Test
-	void setPropertyContainingList() {
+	public void setPropertyContainingList() {
 		List<Integer> property = new ArrayList<>();
 		property.add(3);
 		this.parameterizedList = property;
@@ -266,7 +245,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void indexIntoGenericPropertyContainingNullList() {
+	public void indexIntoGenericPropertyContainingNullList() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
 		SpelExpressionParser parser = new SpelExpressionParser(configuration);
 		Expression expression = parser.parseExpression("property");
@@ -282,7 +261,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void indexIntoGenericPropertyContainingGrowingList() {
+	public void indexIntoGenericPropertyContainingGrowingList() {
 		List<String> property = new ArrayList<>();
 		this.property = property;
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
@@ -300,7 +279,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void indexIntoGenericPropertyContainingGrowingList2() {
+	public void indexIntoGenericPropertyContainingGrowingList2() {
 		List<String> property2 = new ArrayList<>();
 		this.property2 = property2;
 		SpelParserConfiguration configuration = new SpelParserConfiguration(true, true);
@@ -320,7 +299,7 @@ class IndexingTests {
 	public List property2;
 
 	@Test
-	void indexIntoGenericPropertyContainingArray() {
+	public void indexIntoGenericPropertyContainingArray() {
 		String[] property = new String[] { "bar" };
 		this.property = property;
 		SpelExpressionParser parser = new SpelExpressionParser();
@@ -332,7 +311,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void emptyList() {
+	public void emptyList() {
 		listOfScalarNotGeneric = new ArrayList();
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listOfScalarNotGeneric");
@@ -342,7 +321,7 @@ class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void resolveCollectionElementType() {
+	public void resolveCollectionElementType() {
 		listNotGeneric = new ArrayList(2);
 		listNotGeneric.add(5);
 		listNotGeneric.add(6);
@@ -353,7 +332,7 @@ class IndexingTests {
 	}
 
 	@Test
-	void resolveCollectionElementTypeNull() {
+	public void resolveCollectionElementTypeNull() {
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listNotGeneric");
 		assertThat(expression.getValueTypeDescriptor(this).toString()).isEqualTo("@org.springframework.expression.spel.IndexingTests$FieldAnnotation java.util.List<?>");
@@ -370,7 +349,7 @@ class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void resolveMapKeyValueTypes() {
+	public void resolveMapKeyValueTypes() {
 		mapNotGeneric = new HashMap();
 		mapNotGeneric.put("baseAmount", 3.11);
 		mapNotGeneric.put("bonusAmount", 7.17);
@@ -384,12 +363,12 @@ class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void testListOfScalar() {
+	public void testListOfScalar() {
 		listOfScalarNotGeneric = new ArrayList(1);
 		listOfScalarNotGeneric.add("5");
 		SpelExpressionParser parser = new SpelExpressionParser();
 		Expression expression = parser.parseExpression("listOfScalarNotGeneric[0]");
-		assertThat(expression.getValue(this, Integer.class)).isEqualTo(Integer.valueOf(5));
+		assertThat(expression.getValue(this, Integer.class)).isEqualTo(new Integer(5));
 	}
 
 	public List listOfScalarNotGeneric;
@@ -397,7 +376,7 @@ class IndexingTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void testListsOfMap() {
+	public void testListsOfMap() {
 		listOfMapsNotGeneric = new ArrayList();
 		Map map = new HashMap();
 		map.put("fruit", "apple");
