@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -46,10 +46,8 @@ import org.springframework.expression.spel.support.StandardEvaluationContext;
 import org.springframework.expression.spel.testdata.PersonInOtherPackage;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatException;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.within;
-import static org.assertj.core.api.InstanceOfAssertFactories.BOOLEAN;
 
 /**
  * Checks SpelCompiler behavior. This should cover compilation all compiled node types.
@@ -130,7 +128,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 
 	@Test
-	void typeReference() {
+	public void typeReference() throws Exception {
 		expression = parse("T(String)");
 		assertThat(expression.getValue()).isEqualTo(String.class);
 		assertCanCompile(expression);
@@ -198,11 +196,11 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void operatorInstanceOf() {
+	public void operatorInstanceOf() throws Exception {
 		expression = parse("'xyz' instanceof T(String)");
-		assertThat(expression.getValue()).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue()).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue()).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue()).isEqualTo(true);
 
 		expression = parse("'xyz' instanceof T(Integer)");
 		assertThat(expression.getValue()).isEqualTo(false);
@@ -211,21 +209,21 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		List<String> list = new ArrayList<>();
 		expression = parse("#root instanceof T(java.util.List)");
-		assertThat(expression.getValue(list)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(list)).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue(list)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(list)).isEqualTo(true);
 
 		List<String>[] arrayOfLists = new List[] {new ArrayList<String>()};
 		expression = parse("#root instanceof T(java.util.List[])");
-		assertThat(expression.getValue(arrayOfLists)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(arrayOfLists)).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue(arrayOfLists)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(arrayOfLists)).isEqualTo(true);
 
 		int[] intArray = new int[] {1,2,3};
 		expression = parse("#root instanceof T(int[])");
-		assertThat(expression.getValue(intArray)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(intArray)).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue(intArray)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(intArray)).isEqualTo(true);
 
 		String root = null;
 		expression = parse("#root instanceof T(Integer)");
@@ -241,18 +239,18 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		root = "howdy!";
 		expression = parse("#root instanceof T(java.lang.Object)");
-		assertThat(expression.getValue(root)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(root)).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue(root)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(root)).isEqualTo(true);
 	}
 
 	@Test
-	void operatorInstanceOf_SPR14250() throws Exception {
+	public void operatorInstanceOf_SPR14250() throws Exception {
 		// primitive left operand - should get boxed, return true
 		expression = parse("3 instanceof T(Integer)");
-		assertThat(expression.getValue()).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue()).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue()).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue()).isEqualTo(true);
 
 		// primitive left operand - should get boxed, return false
 		expression = parse("3 instanceof T(String)");
@@ -268,9 +266,9 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		// double slot left operand - should get boxed, return true
 		expression = parse("3.0d instanceof T(Double)");
-		assertThat(expression.getValue()).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue()).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue()).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue()).isEqualTo(true);
 
 		// Only when the right hand operand is a direct type reference
 		// will it be compilable.
@@ -294,7 +292,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void stringLiteral() throws Exception {
+	public void stringLiteral() throws Exception {
 		expression = parser.parseExpression("'abcde'");
 		assertThat(expression.getValue(new TestClass1(), String.class)).isEqualTo("abcde");
 		assertCanCompile(expression);
@@ -309,18 +307,18 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void nullLiteral() throws Exception {
+	public void nullLiteral() throws Exception {
 		expression = parser.parseExpression("null");
 		Object resultI = expression.getValue(new TestClass1(), Object.class);
 		assertCanCompile(expression);
 		Object resultC = expression.getValue(new TestClass1(), Object.class);
-		assertThat(resultI).isNull();
-		assertThat(resultC).isNull();
-		assertThat(resultC).isNull();
+		assertThat(resultI).isEqualTo(null);
+		assertThat(resultC).isEqualTo(null);
+		assertThat(resultC).isEqualTo(null);
 	}
 
 	@Test
-	void realLiteral() throws Exception {
+	public void realLiteral() throws Exception {
 		expression = parser.parseExpression("3.4d");
 		double resultI = expression.getValue(new TestClass1(), Double.TYPE);
 		assertCanCompile(expression);
@@ -334,7 +332,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 	@SuppressWarnings("rawtypes")
 	@Test
-	void inlineList() throws Exception {
+	public void inlineList() throws Exception {
 		expression = parser.parseExpression("'abcde'.substring({1,3,4}[0])");
 		Object o = expression.getValue();
 		assertThat(o).isEqualTo("bcde");
@@ -373,7 +371,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 	@SuppressWarnings("rawtypes")
 	@Test
-	void nestedInlineLists() throws Exception {
+	public void nestedInlineLists() throws Exception {
 		Object o = null;
 
 		expression = parser.parseExpression("{{1,2,3},{4,5,6},{7,8,9}}");
@@ -448,7 +446,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void intLiteral() throws Exception {
+	public void intLiteral() throws Exception {
 		expression = parser.parseExpression("42");
 		int resultI = expression.getValue(new TestClass1(), Integer.TYPE);
 		assertCanCompile(expression);
@@ -479,7 +477,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void longLiteral() throws Exception {
+	public void longLiteral() throws Exception {
 		expression = parser.parseExpression("99L");
 		long resultI = expression.getValue(new TestClass1(), Long.TYPE);
 		assertCanCompile(expression);
@@ -489,24 +487,24 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void booleanLiteral() throws Exception {
+	public void booleanLiteral() throws Exception {
 		expression = parser.parseExpression("true");
 		boolean resultI = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isTrue();
+		assertThat(resultI).isEqualTo(true);
 		assertThat(SpelCompiler.compile(expression)).isTrue();
 		boolean resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultC).isTrue();
+		assertThat(resultC).isEqualTo(true);
 
 		expression = parser.parseExpression("false");
 		resultI = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isFalse();
+		assertThat(resultI).isEqualTo(false);
 		assertThat(SpelCompiler.compile(expression)).isTrue();
 		resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultC).isFalse();
+		assertThat(resultC).isEqualTo(false);
 	}
 
 	@Test
-	void floatLiteral() throws Exception {
+	public void floatLiteral() throws Exception {
 		expression = parser.parseExpression("3.4f");
 		float resultI = expression.getValue(new TestClass1(), Float.TYPE);
 		assertCanCompile(expression);
@@ -519,42 +517,42 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void opOr() throws Exception {
+	public void opOr() throws Exception {
 		Expression expression = parser.parseExpression("false or false");
 		boolean resultI = expression.getValue(1, Boolean.TYPE);
 		SpelCompiler.compile(expression);
 		boolean resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isFalse();
-		assertThat(resultC).isFalse();
+		assertThat(resultI).isEqualTo(false);
+		assertThat(resultC).isEqualTo(false);
 
 		expression = parser.parseExpression("false or true");
 		resultI = expression.getValue(1, Boolean.TYPE);
 		assertCanCompile(expression);
 		resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isTrue();
-		assertThat(resultC).isTrue();
+		assertThat(resultI).isEqualTo(true);
+		assertThat(resultC).isEqualTo(true);
 
 		expression = parser.parseExpression("true or false");
 		resultI = expression.getValue(1, Boolean.TYPE);
 		assertCanCompile(expression);
 		resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isTrue();
-		assertThat(resultC).isTrue();
+		assertThat(resultI).isEqualTo(true);
+		assertThat(resultC).isEqualTo(true);
 
 		expression = parser.parseExpression("true or true");
 		resultI = expression.getValue(1, Boolean.TYPE);
 		assertCanCompile(expression);
 		resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isTrue();
-		assertThat(resultC).isTrue();
+		assertThat(resultI).isEqualTo(true);
+		assertThat(resultC).isEqualTo(true);
 
 		TestClass4 tc = new TestClass4();
 		expression = parser.parseExpression("getfalse() or gettrue()");
 		resultI = expression.getValue(tc, Boolean.TYPE);
 		assertCanCompile(expression);
 		resultC = expression.getValue(tc, Boolean.TYPE);
-		assertThat(resultI).isTrue();
-		assertThat(resultC).isTrue();
+		assertThat(resultI).isEqualTo(true);
+		assertThat(resultC).isEqualTo(true);
 
 		// Can't compile this as we aren't going down the getfalse() branch in our evaluation
 		expression = parser.parseExpression("gettrue() or getfalse()");
@@ -586,29 +584,29 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		boolean resultI = expression.getValue(1, Boolean.TYPE);
 		SpelCompiler.compile(expression);
 		boolean resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isFalse();
-		assertThat(resultC).isFalse();
+		assertThat(resultI).isEqualTo(false);
+		assertThat(resultC).isEqualTo(false);
 
 		expression = parser.parseExpression("false and true");
 		resultI = expression.getValue(1, Boolean.TYPE);
 		SpelCompiler.compile(expression);
 		resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isFalse();
-		assertThat(resultC).isFalse();
+		assertThat(resultI).isEqualTo(false);
+		assertThat(resultC).isEqualTo(false);
 
 		expression = parser.parseExpression("true and false");
 		resultI = expression.getValue(1, Boolean.TYPE);
 		SpelCompiler.compile(expression);
 		resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isFalse();
-		assertThat(resultC).isFalse();
+		assertThat(resultI).isEqualTo(false);
+		assertThat(resultC).isEqualTo(false);
 
 		expression = parser.parseExpression("true and true");
 		resultI = expression.getValue(1, Boolean.TYPE);
 		SpelCompiler.compile(expression);
 		resultC = expression.getValue(1, Boolean.TYPE);
-		assertThat(resultI).isTrue();
-		assertThat(resultC).isTrue();
+		assertThat(resultI).isEqualTo(true);
+		assertThat(resultC).isEqualTo(true);
 
 		TestClass4 tc = new TestClass4();
 
@@ -648,9 +646,9 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		assertThat(expression.getValue()).isEqualTo(false);
 
 		expression = parse("!false");
-		assertThat(expression.getValue()).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue()).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue()).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue()).isEqualTo(true);
 
 		boolean b = true;
 		expression = parse("!#root");
@@ -660,9 +658,9 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		b = false;
 		expression = parse("!#root");
-		assertThat(expression.getValue(b)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(b)).isEqualTo(true);
 		assertCanCompile(expression);
-		assertThat(expression.getValue(b)).asInstanceOf(BOOLEAN).isTrue();
+		assertThat(expression.getValue(b)).isEqualTo(true);
 	}
 
 	@Test
@@ -1253,8 +1251,8 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		ctx.setVariable("target", "123");
 		assertThat(expression.getValue(ctx)).isEqualTo("123");
 		ctx.setVariable("target", 42);
-		assertThatExceptionOfType(SpelEvaluationException.class)
-			.isThrownBy(() -> expression.getValue(ctx))
+		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
+				expression.getValue(ctx))
 			.withCauseInstanceOf(ClassCastException.class);
 
 		ctx.setVariable("target", "abc");
@@ -1265,8 +1263,8 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		ctx.setVariable("target", "1");
 		assertThat(expression.getValue(ctx)).isEqualTo('1');
 		ctx.setVariable("target", 42);
-		assertThatExceptionOfType(SpelEvaluationException.class)
-			.isThrownBy(() -> expression.getValue(ctx))
+		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
+				expression.getValue(ctx))
 			.withCauseInstanceOf(ClassCastException.class);
 	}
 
@@ -3483,7 +3481,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		assertThat(tc8.s).isEqualTo("123");
 		assertThat(tc8.d).isCloseTo(4.0d, within(0.5d));
 
-		assertThat(tc8.z).isTrue();
+		assertThat(tc8.z).isEqualTo(true);
 
 		// no-arg ctor
 		expression = parser.parseExpression("new " + testclass8 + "()");
@@ -3509,7 +3507,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void methodReferenceReflectiveMethodSelectionWithVarargs() throws Exception {
+	public void methodReferenceReflectiveMethodSelectionWithVarargs() throws Exception {
 		TestClass10 tc = new TestClass10();
 
 		// Should call the non varargs version of concat
@@ -3528,11 +3526,11 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		expression = parser.parseExpression("concat()");
 		assertCantCompile(expression);
 		expression.getValue(tc);
-		assertThat(tc.s).isEmpty();
+		assertThat(tc.s).isEqualTo("");
 		assertCanCompile(expression);
 		tc.reset();
 		expression.getValue(tc);
-		assertThat(tc.s).isEmpty();
+		assertThat(tc.s).isEqualTo("");
 		tc.reset();
 
 		// Should call the non varargs version of concat
@@ -3551,27 +3549,27 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		expression = parser.parseExpression("concat2()");
 		assertCantCompile(expression);
 		expression.getValue(tc);
-		assertThat(tc.s).isEmpty();
+		assertThat(tc.s).isEqualTo("");
 		assertCanCompile(expression);
 		tc.reset();
 		expression.getValue(tc);
-		assertThat(tc.s).isEmpty();
+		assertThat(tc.s).isEqualTo("");
 		tc.reset();
 	}
 
 	@Test
-	void methodReferenceVarargs() {
+	public void methodReferenceVarargs() throws Exception {
 		TestClass5 tc = new TestClass5();
 
 		// varargs string
 		expression = parser.parseExpression("eleven()");
 		assertCantCompile(expression);
 		expression.getValue(tc);
-		assertThat(tc.s).isEmpty();
+		assertThat(tc.s).isEqualTo("");
 		assertCanCompile(expression);
 		tc.reset();
 		expression.getValue(tc);
-		assertThat(tc.s).isEmpty();
+		assertThat(tc.s).isEqualTo("");
 		tc.reset();
 
 		// varargs string
@@ -3842,7 +3840,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void methodReference() {
+	public void methodReference() throws Exception {
 		TestClass5 tc = new TestClass5();
 
 		// non-static method, no args, void return
@@ -3987,7 +3985,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void errorHandling() {
+	public void errorHandling() throws Exception {
 		TestClass5 tc = new TestClass5();
 
 		// changing target
@@ -3999,8 +3997,8 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		assertThat(expression.getValue(is)).isEqualTo(2);
 		assertCanCompile(expression);
 		assertThat(expression.getValue(is)).isEqualTo(2);
-		assertThatExceptionOfType(SpelEvaluationException.class)
-			.isThrownBy(() -> expression.getValue(strings))
+		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
+				expression.getValue(strings))
 			.withCauseInstanceOf(ClassCastException.class);
 		SpelCompiler.revertToInterpreted(expression);
 		assertThat(expression.getValue(strings)).isEqualTo("b");
@@ -4027,8 +4025,8 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		assertCanCompile(expression);
 		tc.reset();
 		tc.obj=42;
-		assertThatExceptionOfType(SpelEvaluationException.class)
-			.isThrownBy(() -> expression.getValue(tc))
+		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
+				expression.getValue(tc))
 			.withCauseInstanceOf(ClassCastException.class);
 
 
@@ -4036,13 +4034,13 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		expression = parser.parseExpression("#root.charAt(0)");
 		assertThat(expression.getValue("abc")).isEqualTo('a');
 		assertCanCompile(expression);
-		assertThatExceptionOfType(SpelEvaluationException.class)
-			.isThrownBy(() -> expression.getValue(42))
+		assertThatExceptionOfType(SpelEvaluationException.class).isThrownBy(() ->
+				expression.getValue(42))
 			.withCauseInstanceOf(ClassCastException.class);
 	}
 
 	@Test
-	void methodReference_staticMethod() {
+	public void methodReference_staticMethod() throws Exception {
 		Expression expression = parser.parseExpression("T(Integer).valueOf(42)");
 		int resultI = expression.getValue(new TestClass1(), Integer.TYPE);
 		assertCanCompile(expression);
@@ -4052,7 +4050,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void methodReference_literalArguments_int() {
+	public void methodReference_literalArguments_int() throws Exception {
 		Expression expression = parser.parseExpression("'abcd'.substring(1,3)");
 		String resultI = expression.getValue(new TestClass1(), String.class);
 		assertCanCompile(expression);
@@ -4062,7 +4060,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void methodReference_simpleInstanceMethodNoArg() {
+	public void methodReference_simpleInstanceMethodNoArg() throws Exception {
 		Expression expression = parser.parseExpression("toString()");
 		String resultI = expression.getValue(42, String.class);
 		assertCanCompile(expression);
@@ -4072,7 +4070,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void methodReference_simpleInstanceMethodNoArgReturnPrimitive() {
+	public void methodReference_simpleInstanceMethodNoArgReturnPrimitive() throws Exception {
 		expression = parser.parseExpression("intValue()");
 		int resultI = expression.getValue(42, Integer.TYPE);
 		assertThat(resultI).isEqualTo(42);
@@ -4082,7 +4080,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void methodReference_simpleInstanceMethodOneArgReturnPrimitive1() {
+	public void methodReference_simpleInstanceMethodOneArgReturnPrimitive1() throws Exception {
 		Expression expression = parser.parseExpression("indexOf('b')");
 		int resultI = expression.getValue("abc", Integer.TYPE);
 		assertCanCompile(expression);
@@ -4092,7 +4090,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void methodReference_simpleInstanceMethodOneArgReturnPrimitive2() {
+	public void methodReference_simpleInstanceMethodOneArgReturnPrimitive2() throws Exception {
 		expression = parser.parseExpression("charAt(2)");
 		char resultI = expression.getValue("abc", Character.TYPE);
 		assertThat(resultI).isEqualTo('c');
@@ -4102,7 +4100,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void compoundExpression() {
+	public void compoundExpression() throws Exception {
 		Payload payload = new Payload();
 		expression = parser.parseExpression("DR[0]");
 		assertThat(expression.getValue(payload).toString()).isEqualTo("instanceof Two");
@@ -4139,7 +4137,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void mixingItUp_indexerOpEqTernary() {
+	public void mixingItUp_indexerOpEqTernary() throws Exception {
 		Map<String, String> m = new HashMap<>();
 		m.put("andy","778");
 
@@ -4152,7 +4150,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void propertyReference() {
+	public void propertyReference() throws Exception {
 		TestClass6 tc = new TestClass6();
 
 		// non static field
@@ -4182,17 +4180,10 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		assertThat(expression.getValue(tc)).isEqualTo("value4");
 		assertCanCompile(expression);
 		assertThat(expression.getValue(tc)).isEqualTo("value4");
-
-		// record-style accessor
-		expression = parser.parseExpression("strawberry");
-		assertCantCompile(expression);
-		assertThat(expression.getValue(tc)).isEqualTo("value5");
-		assertCanCompile(expression);
-		assertThat(expression.getValue(tc)).isEqualTo("value5");
 	}
 
 	@Test
-	void propertyReferenceVisibility_SPR12771() {
+	public void propertyReferenceVisibility_SPR12771() {
 		StandardEvaluationContext ctx = new StandardEvaluationContext();
 		ctx.setVariable("httpServletRequest", HttpServlet3RequestFactory.getOne());
 		// Without a fix compilation was inserting a checkcast to a private type
@@ -4204,7 +4195,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 	@SuppressWarnings("unchecked")
 	@Test
-	void indexer() {
+	public void indexer() throws Exception {
 		String[] sss = new String[] {"a","b","c"};
 		Number[] ns = new Number[] {2,8,9};
 		int[] is = new int[] {8,9,10};
@@ -4511,7 +4502,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void plusNeedingCheckcast_SPR12426() {
+	public void plusNeedingCheckcast_SPR12426() {
 		expression = parser.parseExpression("object + ' world'");
 		Object v = expression.getValue(new FooObject());
 		assertThat(v).isEqualTo("hello world");
@@ -4526,7 +4517,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void mixingItUp_propertyAccessIndexerOpLtTernaryRootNull() {
+	public void mixingItUp_propertyAccessIndexerOpLtTernaryRootNull() throws Exception {
 		Payload payload = new Payload();
 
 		expression = parser.parseExpression("DR[0].three");
@@ -4554,7 +4545,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void variantGetter() throws Exception {
+	public void variantGetter() throws Exception {
 		Payload2Holder holder = new Payload2Holder();
 		StandardEvaluationContext ctx = new StandardEvaluationContext();
 		ctx.addPropertyAccessor(new MyAccessor());
@@ -4562,13 +4553,27 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		Object v = expression.getValue(ctx,holder);
 		assertThat(v).isEqualTo("abc");
 
+		//	// time it interpreted
+		//	long stime = System.currentTimeMillis();
+		//	for (int i = 0; i < 100000; i++) {
+		//		v = expression.getValue(ctx,holder);
+		//	}
+		//	System.out.println((System.currentTimeMillis() - stime));
+
 		assertCanCompile(expression);
 		v = expression.getValue(ctx,holder);
 		assertThat(v).isEqualTo("abc");
+
+		//	// time it compiled
+		//	stime = System.currentTimeMillis();
+		//	for (int i = 0; i < 100000; i++) {
+		//		v = expression.getValue(ctx,holder);
+		//	}
+		//	System.out.println((System.currentTimeMillis() - stime));
 	}
 
 	@Test
-	void compilerWithGenerics_12040() {
+	public void compilerWithGenerics_12040() {
 		expression = parser.parseExpression("payload!=2");
 		assertThat(expression.getValue(new GenericMessageTestHelper<>(4), Boolean.class)).isTrue();
 		assertCanCompile(expression);
@@ -4677,7 +4682,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 	// The new helper class here uses an upper bound on the generic
 	@Test
-	void compilerWithGenerics_12040_2() {
+	public void compilerWithGenerics_12040_2() {
 		expression = parser.parseExpression("payload/2");
 		assertThat(expression.getValue(new GenericMessageTestHelper2<>(4))).isEqualTo(2);
 		assertCanCompile(expression);
@@ -4721,7 +4726,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 	// The other numeric operators
 	@Test
-	void compilerWithGenerics_12040_3() {
+	public void compilerWithGenerics_12040_3() {
 		expression = parser.parseExpression("payload >= 2");
 		assertThat(expression.getValue(new GenericMessageTestHelper2<>(4), Boolean.TYPE)).isTrue();
 		assertCanCompile(expression);
@@ -4764,7 +4769,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void indexerMapAccessor_12045() throws Exception {
+	public void indexerMapAccessor_12045() throws Exception {
 		SpelParserConfiguration spc = new SpelParserConfiguration(
 				SpelCompilerMode.IMMEDIATE,getClass().getClassLoader());
 		SpelExpressionParser sep = new SpelExpressionParser(spc);
@@ -4793,7 +4798,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void elvisOperator_SPR15192() {
+	public void elvisOperator_SPR15192() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(SpelCompilerMode.IMMEDIATE, null);
 		Expression exp;
 
@@ -4877,7 +4882,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void elvisOperator_SPR17214() {
+	public void elvisOperator_SPR17214() throws Exception {
 		SpelParserConfiguration spc = new SpelParserConfiguration(SpelCompilerMode.IMMEDIATE, null);
 		SpelExpressionParser sep = new SpelExpressionParser(spc);
 
@@ -4925,7 +4930,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void testNullComparison_SPR22358() {
+	public void testNullComparison_SPR22358() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(SpelCompilerMode.OFF, null);
 		SpelExpressionParser parser = new SpelExpressionParser(configuration);
 		StandardEvaluationContext ctx = new StandardEvaluationContext();
@@ -4980,12 +4985,13 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		assertThat(fast.compileExpression()).isTrue();
 		r.setValue2(null);
 		// try the numbers 0,1,2,null
-		for (int i = 0; i < 4; i++) {
-			r.setValue(i < 3 ? i : null);
+		for (int i=0;i<4;i++) {
+			r.setValue(i<3?i:null);
 			boolean slowResult = (Boolean)slow.getValue(ctx);
 			boolean fastResult = (Boolean)fast.getValue(ctx);
-			assertThat(fastResult).as("Differing results: expression=" + expressionText +
-						" value=" + r.getValue() + " slow=" + slowResult + " fast="+fastResult).isEqualTo(slowResult);
+			// System.out.println("Trying "+expressionText+" with value="+r.getValue()+" result is "+slowResult);
+			assertThat(fastResult).as(" Differing results: expression="+expressionText+
+						" value="+r.getValue()+" slow="+slowResult+" fast="+fastResult).isEqualTo(slowResult);
 		}
 	}
 
@@ -4996,17 +5002,18 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		assertThat(fast.compileExpression()).isTrue();
 		Reg r = (Reg)ctx.getRootObject().getValue();
 		// try the numbers 0,1,2,null
-		for (int i = 0; i < 4; i++) {
-			r.setValue(i < 3 ? i : null);
+		for (int i=0;i<4;i++) {
+			r.setValue(i<3?i:null);
 			boolean slowResult = (Boolean)slow.getValue(ctx);
 			boolean fastResult = (Boolean)fast.getValue(ctx);
-			assertThat(fastResult).as("Differing results: expression=" + expressionText +
-					" value=" + r.getValue() + " slow=" + slowResult + " fast="+fastResult).isEqualTo(slowResult);
+			// System.out.println("Trying "+expressionText+" with value="+r.getValue()+" result is "+slowResult);
+			assertThat(fastResult).as(" Differing results: expression="+expressionText+
+						" value="+r.getValue()+" slow="+slowResult+" fast="+fastResult).isEqualTo(slowResult);
 		}
 	}
 
 	@Test
-	void ternaryOperator_SPR15192() {
+	public void ternaryOperator_SPR15192() {
 		SpelParserConfiguration configuration = new SpelParserConfiguration(SpelCompilerMode.IMMEDIATE, null);
 		Expression exp;
 		StandardEvaluationContext context = new StandardEvaluationContext();
@@ -5050,9 +5057,9 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		// null condition
 		exp = new SpelExpressionParser(configuration).parseExpression("3==3?null:4L");
-		assertThat(exp.getValue(context, new Foo(), String.class)).isNull();
+		assertThat(exp.getValue(context, new Foo(), String.class)).isEqualTo(null);
 		assertCanCompile(exp);
-		assertThat(exp.getValue(context, new Foo(), String.class)).isNull();
+		assertThat(exp.getValue(context, new Foo(), String.class)).isEqualTo(null);
 		assertIsCompiled(exp);
 
 		// variable access returning primitive
@@ -5080,7 +5087,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	@Test
-	void repeatedCompilation() throws Exception {
+	public void repeatedCompilation() throws Exception {
 		// Verifying that after a number of compilations, the classloaders
 		// used to load the compiled expressions are discarded/replaced.
 		// See SpelCompiler.loadClass()
@@ -5113,21 +5120,21 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 			List<?> ls = (List<?>) object;
 			for (Object l: ls) {
 				s.append(l);
-				s.append(' ');
+				s.append(" ");
 			}
 		}
 		else if (object instanceof Object[]) {
 			Object[] os = (Object[]) object;
 			for (Object o: os) {
 				s.append(o);
-				s.append(' ');
+				s.append(" ");
 			}
 		}
 		else if (object instanceof int[]) {
 			int[] is = (int[]) object;
 			for (int i: is) {
 				s.append(i);
-				s.append(' ');
+				s.append(" ");
 			}
 		}
 		else {
@@ -5149,10 +5156,10 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 	}
 
 	private void assertGetValueFail(Expression expression) {
-		assertThatException().isThrownBy(expression::getValue);
+		assertThatExceptionOfType(Exception.class).isThrownBy(expression::getValue);
 	}
 
-	public static void assertIsCompiled(Expression expression) {
+	private void assertIsCompiled(Expression expression) {
 		try {
 			Field field = SpelExpression.class.getDeclaredField("compiledAst");
 			field.setAccessible(true);
@@ -5832,6 +5839,7 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		public String orange = "value1";
 		public static String apple = "value2";
+
 		public long peach = 34L;
 
 		public String getBanana() {
@@ -5840,10 +5848,6 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		public static String getPlum() {
 			return "value4";
-		}
-
-		public String strawberry() {
-			return "value5";
 		}
 	}
 
@@ -5933,9 +5937,9 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 		public Obj3(String s, Float f, int... ints) {
 			StringBuilder b = new StringBuilder();
 			b.append(s);
-			b.append(':');
+			b.append(":");
 			b.append(Float.toString(f));
-			b.append(':');
+			b.append(":");
 			for (int param: ints) {
 				b.append(Integer.toString(param));
 			}
@@ -6206,9 +6210,9 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		public Reg(int v) {
 			this._value  = v;
-			this._valueL = Long.valueOf(v);
-			this._valueD = (double) v;
-			this._valueF = (float) v;
+			this._valueL = new Long(v);
+			this._valueD = new Double(v);
+			this._valueF = new Float(v);
 		}
 
 		public Integer getValue() {
@@ -6245,16 +6249,16 @@ public class SpelCompilationCoverageTests extends AbstractExpressionTests {
 
 		public void setValue(Integer value) {
 			_value  = value;
-			_valueL = value==null?null:Long.valueOf(value);
-			_valueD = value==null?null:Double.valueOf(value);
-			_valueF = value==null?null:Float.valueOf(value);
+			_valueL = value==null?null:new Long(value);
+			_valueD = value==null?null:new Double(value);
+			_valueF = value==null?null:new Float(value);
 		}
 
 		public void setValue2(Integer value) {
 			_value2  = value;
-			_valueL2 = value==null?null:Long.valueOf(value);
-			_valueD2 = value==null?null:Double.valueOf(value);
-			_valueF2 = value==null?null:Float.valueOf(value);
+			_valueL2 = value==null?null:new Long(value);
+			_valueD2 = value==null?null:new Double(value);
+			_valueF2 = value==null?null:new Float(value);
 		}
 	}
 
