@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,8 +22,9 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
 
-import jakarta.servlet.jsp.tagext.BodyTag;
-import jakarta.servlet.jsp.tagext.Tag;
+import javax.servlet.jsp.tagext.BodyTag;
+import javax.servlet.jsp.tagext.Tag;
+
 import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.propertyeditors.StringArrayPropertyEditor;
@@ -45,7 +46,7 @@ import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
  * @author Jeremy Grelle
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
-class OptionTagTests extends AbstractHtmlElementTagTests {
+public class OptionTagTests extends AbstractHtmlElementTagTests {
 
 	private static final String ARRAY_SOURCE = "abc,123,def";
 
@@ -78,7 +79,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 
 
 	@Test
-	void canBeDisabledEvenWhenSelected() throws Exception {
+	public void canBeDisabledEvenWhenSelected() throws Exception {
 		String selectName = "testBean.name";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
@@ -100,7 +101,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void renderNotSelected() throws Exception {
+	public void renderNotSelected() throws Exception {
 		String selectName = "testBean.name";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
@@ -120,7 +121,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void renderWithDynamicAttributes() throws Exception {
+	public void renderWithDynamicAttributes() throws Exception {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -148,7 +149,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void renderSelected() throws Exception {
+	public void renderSelected() throws Exception {
 		String selectName = "testBean.name";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
@@ -171,7 +172,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withNoLabel() throws Exception {
+	public void withNoLabel() throws Exception {
 		String selectName = "testBean.name";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
@@ -194,7 +195,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withoutContext() throws Exception {
+	public void withoutContext() throws Exception {
 		this.tag.setParent(null);
 		this.tag.setValue("foo");
 		this.tag.setLabel("Foo");
@@ -203,7 +204,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withPropertyEditor() throws Exception {
+	public void withPropertyEditor() throws Exception {
 		String selectName = "testBean.stringArray";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false) {
 			@Override
@@ -232,7 +233,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withPropertyEditorStringComparison() throws Exception {
+	public void withPropertyEditorStringComparison() throws Exception {
 		final PropertyEditor testBeanEditor = new TestBeanPropertyEditor();
 		testBeanEditor.setValue(new TestBean("Sally"));
 		String selectName = "testBean.spouse";
@@ -260,11 +261,11 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withCustomObjectSelected() throws Exception {
+	public void withCustomObjectSelected() throws Exception {
 		String selectName = "testBean.someNumber";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
-		this.tag.setValue(12.34f);
+		this.tag.setValue(new Float(12.34));
 		this.tag.setLabel("GBP 12.34");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(BodyTag.EVAL_BODY_BUFFERED);
@@ -281,11 +282,11 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withCustomObjectNotSelected() throws Exception {
+	public void withCustomObjectNotSelected() throws Exception {
 		String selectName = "testBean.someNumber";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
-		this.tag.setValue(12.35f);
+		this.tag.setValue(new Float(12.35));
 		this.tag.setLabel("GBP 12.35");
 		int result = this.tag.doStartTag();
 		assertThat(result).isEqualTo(BodyTag.EVAL_BODY_BUFFERED);
@@ -302,9 +303,9 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withCustomObjectAndEditorSelected() throws Exception {
+	public void withCustomObjectAndEditorSelected() throws Exception {
 		final PropertyEditor floatEditor = new SimpleFloatEditor();
-		floatEditor.setValue(Float.valueOf("12.34"));
+		floatEditor.setValue(new Float("12.34"));
 		String selectName = "testBean.someNumber";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false) {
 			@Override
@@ -314,7 +315,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 		};
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
 
-		this.tag.setValue(12.34f);
+		this.tag.setValue(new Float(12.34));
 		this.tag.setLabel("12.34f");
 
 		int result = this.tag.doStartTag();
@@ -330,7 +331,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void withCustomObjectAndEditorNotSelected() throws Exception {
+	public void withCustomObjectAndEditorNotSelected() throws Exception {
 		final PropertyEditor floatEditor = new SimpleFloatEditor();
 		String selectName = "testBean.someNumber";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false) {
@@ -341,7 +342,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 		};
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
 
-		this.tag.setValue(12.35f);
+		this.tag.setValue(new Float(12.35));
 		this.tag.setLabel("12.35f");
 
 		int result = this.tag.doStartTag();
@@ -357,7 +358,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void asBodyTag() throws Exception {
+	public void asBodyTag() throws Exception {
 		String selectName = "testBean.name";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
@@ -379,7 +380,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void asBodyTagSelected() throws Exception {
+	public void asBodyTagSelected() throws Exception {
 		String selectName = "testBean.name";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
@@ -400,7 +401,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void asBodyTagCollapsed() throws Exception {
+	public void asBodyTagCollapsed() throws Exception {
 		String selectName = "testBean.name";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false);
 		getPageContext().setAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, bindStatus);
@@ -422,7 +423,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void asBodyTagWithEditor() throws Exception {
+	public void asBodyTagWithEditor() throws Exception {
 		String selectName = "testBean.stringArray";
 		BindStatus bindStatus = new BindStatus(getRequestContext(), selectName, false) {
 			@Override
@@ -446,7 +447,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void multiBind() throws Exception {
+	public void multiBind() throws Exception {
 		BeanPropertyBindingResult result = new BeanPropertyBindingResult(new TestBean(), "testBean");
 		result.getPropertyAccessor().registerCustomEditor(TestBean.class, "friends", new FriendEditor());
 		exposeBindingResult(result);
@@ -462,7 +463,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	void optionTagNotNestedWithinSelectTag() throws Exception {
+	public void optionTagNotNestedWithinSelectTag() throws Exception {
 		tag.setParent(null);
 		tag.setValue("foo");
 		assertThatIllegalStateException().as("when not nested within a <select/> tag").isThrownBy(
@@ -485,7 +486,7 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 		bean.setFavouriteColour(Colour.GREEN);
 		bean.setStringArray(ARRAY);
 		bean.setSpouse(new TestBean("Sally"));
-		bean.setSomeNumber(Float.valueOf("12.34"));
+		bean.setSomeNumber(new Float("12.34"));
 
 		List friends = new ArrayList();
 		friends.add(new TestBean("bar"));
@@ -556,7 +557,8 @@ class OptionTagTests extends AbstractHtmlElementTagTests {
 
 		@Override
 		public boolean equals(Object obj) {
-			if (obj instanceof RulesVariant other) {
+			if (obj instanceof RulesVariant) {
+				RulesVariant other = (RulesVariant) obj;
 				return this.toId().equals(other.toId());
 			}
 			return false;
