@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -80,7 +81,7 @@ public abstract class AbstractSockJsSession implements SockJsSession {
 	 * @see #indicatesDisconnectedClient(Throwable)
 	 */
 	private static final Set<String> DISCONNECTED_CLIENT_EXCEPTIONS =
-			Set.of("ClientAbortException", "EOFException", "EofException");
+			new HashSet<>(Arrays.asList("ClientAbortException", "EOFException", "EofException"));
 
 
 	/**
@@ -379,41 +380,35 @@ public abstract class AbstractSockJsSession implements SockJsSession {
 	public void delegateMessages(String... messages) throws SockJsMessageDeliveryException {
 		for (int i = 0; i < messages.length; i++) {
 			try {
-				if (isClosed()) {
-					logUndeliveredMessages(i, messages);
-					return;
+				if (!isClosed()) {
+					this.handler.handleMessage(this, new TextMessage(messages[i]));
 				}
-				this.handler.handleMessage(this, new TextMessage(messages[i]));
+				else {
+					List<String> undelivered = getUndelivered(messages, i);
+					if (undelivered.isEmpty()) {
+						return;
+					}
+					throw new SockJsMessageDeliveryException(this.id, undelivered, "Session closed");
+				}
 			}
 			catch (Exception ex) {
-				if (isClosed()) {
-					if (logger.isTraceEnabled()) {
-						logger.trace("Failed to handle message '" + messages[i] + "'", ex);
-					}
-					logUndeliveredMessages(i, messages);
-					return;
-				}
 				throw new SockJsMessageDeliveryException(this.id, getUndelivered(messages, i), ex);
 			}
 		}
 	}
 
-	private void logUndeliveredMessages(int index, String[] messages) {
-		List<String> undelivered = getUndelivered(messages, index);
-		if (logger.isTraceEnabled() && !undelivered.isEmpty()) {
-			logger.trace("Dropped inbound message(s) due to closed session: " + undelivered);
-		}
-	}
-
 	private static List<String> getUndelivered(String[] messages, int i) {
-		return switch (messages.length - i) {
-			case 0 -> Collections.emptyList();
-			case 1 -> (messages[i].trim().isEmpty() ?
-					Collections.<String>emptyList() : Collections.singletonList(messages[i]));
-			default -> Arrays.stream(Arrays.copyOfRange(messages, i, messages.length))
-					.filter(message -> !message.trim().isEmpty())
-					.collect(Collectors.toList());
-		};
+		switch (messages.length - i) {
+			case 0:
+				return Collections.emptyList();
+			case 1:
+				return (messages[i].trim().isEmpty() ?
+						Collections.emptyList() : Collections.singletonList(messages[i]));
+			default:
+				return Arrays.stream(Arrays.copyOfRange(messages, i, messages.length))
+						.filter(message -> !message.trim().isEmpty())
+						.collect(Collectors.toList());
+		}
 	}
 
 	/**
